examples/error/multiple_declarations.rx
function void main() {

}

function void main() {
  string a;

  list  a;
}